# kaggle_academics_classification

./: README.md  app.py  pyproject.toml  working_note
config/model/: model1.yaml
notebooks/: EDA.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: pipeline.py  process.py  train_model.py  utils.py
templates/: base.html  home.html
tests/: test_process.py  test_train_model.py  test_utils.py
